# app-store-dnas

./: .gitignore  Makefile  README.md  default.nix  package-lock.json  package.json
appstore_types/: Cargo.toml
appstore_types/src/: lib.rs
bundled/: happ.yaml
bundled/appstore/: dna.yaml
bundled/portal/: dna.yaml
dnas/appstore/: Cargo.toml  Makefile  dna.yaml
dnas/appstore/types/: Cargo.toml
dnas/appstore/types/src/: app_entry.rs  app_version_entry.rs  group_anchor_entry.rs  lib.rs  moderator_entry.rs  publisher_entry.rs
dnas/appstore/zomelets/: README.md  package-lock.json  package.json  webpack.config.js
dnas/appstore/zomelets/src/: index.js  types.js
happ/: happ.yaml
hc_utils/: Cargo.toml
hc_utils/src/: lib.rs
portal_types/: Cargo.toml
portal_types/src/: lib.rs
rfcs/: DL-2023-02-27-01-portal-host-detection.md
tests/: package-lock.json  package.json  setup.js  utils.js
tests/devhub/: happ.yaml
tests/e2e/: test_multiple.js
tests/integration/: test_appstore.js  test_controlled_viewpoint.js  test_multiple.js  test_portal.js  test_webhapp_repacking.js
zomes/: Cargo.toml
zomes/appstore/: Cargo.toml
zomes/appstore/src/: lib.rs  types.rs  validation.rs
zomes/appstore/src/validation/: create_entry.rs  create_link.rs  delete_entry.rs  delete_link.rs  update_entry.rs
zomes/appstore_api/: Cargo.toml
zomes/appstore_api/src/: app.rs  constants.rs  devhub_calls.rs  lib.rs  publisher.rs
zomes/appstore_csr/: Cargo.toml
zomes/appstore_csr/src/: app.rs  app_version.rs  constants.rs  group.rs  lib.rs  publisher.rs  viewpoint.rs
zomes/portal/: Cargo.toml
zomes/portal/src/: errors.rs  lib.rs  types.rs  validation.rs
zomes/portal_api/: Cargo.toml
zomes/portal_api/src/: constants.rs  host.rs  lib.rs
