[package]
name = "hc_utils"
version = "0.3.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "hc_utils"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
hc_crud_caps = { git = "https://github.com/mjbrisebois/rust-hc-crud-caps.git", rev = "ccee03e7493cd45d73b2211f4f465cabde28e357" }
hdi = "0.2.4"
hdk = "0.1.4"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
