[package]
name = "hc_utils"
version = "0.3.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "hc_utils"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
hc_crud_caps = { git = "https://github.com/mjbrisebois/rust-hc-crud-caps.git", rev = "68fc3a029fa910fed74f625678ff92496ebf6742" }
hdi = "0.2.5"
hdk = "0.1.5"
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
