[package]
name = "portal_types"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = "0.1.0"
hdi = "0.1.8"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
