[package]
name = "appstore"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore_types = { path = "../../dnas/appstore/types" }
hc_crud_caps = "0.14.1"
lazy_static = "1.4"
mere_memory_types = "0.94.1"
serde = "1"
whi_hdi_extensions = "0.8.1"
