[package]
name = "appstore"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "appstore"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore_types = { path = "../../dnas/appstore/types" }
hc_crud_caps = "0.19"
lazy_static = "1.4"
mere_memory_types = "0.98"
serde = "1"
whi_hdi_extensions = "0.14"
