[package]
name = "appstore_api"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore = {path = "../appstore"}
hc_crud_caps = "0.8.0"
hc_utils = {path = "../../hc_utils"}
hdk = "0.2.1-beta-rc.0"
hex = "0"
mere_memory_types = "0.87.0"
hc_portal_types = "0.7.0"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
