[package]
name = "appstore_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore = {path = "../appstore"}
hc_coop_content_sdk = "0.2.1"
serde = "1"
whi_hdk_extensions = "0.4"
