[package]
name = "appstore_csr"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "appstore_csr"
crate-type = ["cdylib", "rlib"]

[dependencies]
appstore = { path = "../appstore" }
hc_apphub_sdk = { path = "../../../devhub-dnas/dnas/apphub/sdk" }
hc_coop_content_sdk = "0.3.0"
serde = "1"
whi_hdk_extensions = "0.6"
