[package]
name = "portal"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
hc_crud_ceps = "0.68.0"
hdi = "0.1.8"
hdk = "0.0.160"
serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
thiserror = "1"
