[package]
name = "portal"
version = "0.3.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
hc_crud_caps = "0.3.0"
hc_utils = {path = "../../hc_utils"}
hdi = "0.2.0"
hdk = "0.1.0"
portal_types = {path = "../../portal_types"}
serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
thiserror = "1"
