[package]
name = "portal_api"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = "0.1.0"
hc_utils = {path = "../../hc_utils"}
hdk = "0.0.160"
hex = "0"
portal = {path = "../portal"}
rand = "0.8.5"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
thiserror = "1"
