[package]
name = "appstore_types"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "appstore_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_coop_content_sdk = "0.6"
hc_crud_caps = "0.16"
hdi = "0.5.0-dev.10"
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
