[package]
name = "appstore_types"
version = "0.1.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2021"

[lib]
name = "appstore_types"
crate-type = ["cdylib", "rlib"]

[dependencies]
coop_content_sdk = { git = "https://github.com/holochain/hc-cooperative-content.git", package = "hc_coop_content_sdk" }
hc_crud_caps = "0.19"
hdi = "=0.5.1"
rmpv = { version = "1", features = ["with-serde"] }
serde = "1"
serde_yaml = "0.8.17"
thiserror = "1"
